# duckdb-hedged-request

./: 1  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  extension_config.cmake
.skills/duckdb-extension-upgrade/: SKILL.md
src/: hedged_file_handle.cpp  hedged_file_system.cpp  hedged_fs_functions.cpp  hedged_fs_settings.cpp  hedged_request_fs_entry.cpp  hedged_request_fs_extension.cpp  mock_file_system.cpp  thread_pool.cpp
src/include/: annotated_mutex.hpp  future_utils.hpp  hedged_file_handle.hpp  hedged_file_system.hpp  hedged_fs_functions.hpp  hedged_fs_settings.hpp  hedged_request_config.hpp  hedged_request_fs_entry.hpp  hedged_request_fs_extension.hpp  mock_file_system.hpp  mutex.hpp  thread_annotation.hpp  thread_pool.hpp
test/cpp/: CMakeLists.txt  test_hedged_filesystem.cpp
test/sql/: hedged_fs_settings.test  hedged_fs_wrap.test  hedged_request_fs.test
test/unittest/: CMakeLists.txt  future_utils_test.cpp  hedged_file_system_test.cpp  test_filesystem_glob.cpp  test_utils.cpp  test_utils.hpp
